# roodmus

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  analysis.ipynb  analysis_heterogeneous.ipynb  analysis_v2.ipynb  conformations_sampling_example.sh  environment_maarten.txt  minimal_analysis.py  minimal_analysis_ctf_estimation.sh  minimal_analysis_particle_labelling.sh  pyproject.toml  requirements-dev.txt  requirements.txt  roodmus.py  run_parakeet_example.sh  sandbox.ipynb  waymark_example.sh
.github/workflows/: publish-to-pypi.yml
analysis/: utils.py
docs/source/: api.rst  conf.py  explanation.rst  how-to-guides.rst  index.rst  reference.rst  tutorials.rst
docs/source/apidocs/: trajectory_api.rst
notebooks/: plot_fsc.ipynb  test_load_JS_pkls.ipynb
paper/: figure_2.ipynb  figure_3.ipynb  figure_4.ipynb  figure_5.ipynb  figure_6.ipynb  plot_correlation_matrix_6xm5.ipynb  plot_correlation_matrix_RTC.ipynb  plot_correlation_matrix_c3c3b.ipynb  plot_correlation_matrix_mixed.ipynb  plot_correlation_matrix_spike_trimer.ipynb  supplementary_figure_1.ipynb  supplementary_figure_2.ipynb  supplementary_figure_4.ipynb  supplementary_figure_5.ipynb  supplementary_figure_6.ipynb  supplementary_figure_7.ipynb
parakeet/: orientation_generator.py  run_parakeet.py
roodmus/analysis/: analyse_alignment.py  analyse_ctf.py  analyse_picking.py  analyse_picking_old.py  analysis.py  compare_ctf.py  parse_parakeet_progeny.py  plot_ctf.py  plot_picking.py  utils.py
roodmus/run_parakeet/: configuration.py  orientation_generator.py  run_parakeet.py
roodmus/trajectory/: waymarking.py
scripts/: README.md  analysis_heterogeneous.ipynb  conformations_sampling_example.sh  plot_Bfactors.ipynb  plot_ctf_example.sh  plot_fsc.ipynb  plot_picking_example.sh  run_parakeet_example.sh  test_load_JS_pkls.ipynb  test_load_pkls.ipynb  trace_md_through_latent.ipynb  write_starfile_example.sh
scripts/jgreer_scripts/parakeet_scripts/: README.md  create_N_conf_dataset_randomise_confs.sh  investigate_emdb_data.py  parakeet_molecules_config_writer.py  run_create_N_conf_datasets_randomise_confs.sh
scripts/jgreer_scripts/particle_scripts/: README.md  parse_parakeet_progeny.py  test_parse_parakeet_progeny.sh
scripts/jgreer_scripts/trajectory_scripts/: README.md  calc_RMSF.py  ens_tools.py  even_sampling_template.sh  investigate_dynamics.py  make_ens_from_granular_samples.sh  run_calc_RMSF.sh  run_investigate_dynamics.sh  waymark_sampling_template.sh  waymarking.py
scripts/mjoosten_scripts/: README.md  convert_to_particle_stack.py  functions.py  hemoglobin_parakeet.py  manual_cs_metadata.py  parakeet_preprocessing.py  parakeet_sim_inplane.py  parakeet_simulation.py
src/: configuration.py  extract_particle_stack.py  gen_inplane.py  orientation_generator.py  roodmus.py  run_parakeet.py
src/analysis/: analyse_alignment.py  analyse_ctf.py  analyse_picking.py  analysis.py  compare_ctf.py  plot_ctf.py  plot_picking.py  utils.py
src/roodmus/: cli.py  roodmus_cli.py
src/roodmus/analysis/: analyse_alignment.py  analyse_ctf.py  analyse_picking.py  analysis.py  extract_particles.py  parse_parakeet_progeny.py  plot_alignment.py  plot_classes.py  plot_ctf.py  plot_frames.py  plot_heterogeneous_reconstruction.py  plot_picking.py  utils.py
src/roodmus/heterogeneity/: hetRec.py  het_ensemblecomparison.py  het_metrics.py  latent_clustering.py  plot_heterogeneous_reconstruction.py  remove_hydrogens.py
src/roodmus/simulation/: configuration.py  orientation_generator.py  position_generator.py  run_parakeet.py  write_starfile.py
src/roodmus/trajectory/: conformations_sampling.py
src/simulation/: run_parakeet.py
src/trajectory/: waymarking.py
tests/: test_analysis_ctf.txt
tests/integration/: analysis_test.py  het_metrics_test.py  integration_test.py  simulation_test.py  trajectory_test.py
tests/integration/fixtures/: 000000.yaml  autopick.star  micrographs.star  micrographs_ctf.star  mtf_300kV.star  sarscov2-11021566-glyco-nowater-glueCA-0008-first2frames.dcd
tests/integration/fixtures/analysis_test_inputs/cryoSPARC_subset/: J511_050_particles.cs  J513_passthrough_particles_selected.cs  J515_topaz_picked_particles.cs  J519_passthrough_particles_class_3.cs
tests/integration/fixtures/analysis_test_inputs/cryoSPARC_subset_ugraphs/: 000000.yaml
tests/integration/fixtures/analysis_test_inputs/relion_subset/Extract/job007/: particles.star
tests/integration/fixtures/analysis_test_inputs/relion_subset/Extract/job013/: particles.star
tests/integration/fixtures/analysis_test_inputs/relion_subset/Select/job009/: particles.star
tests/integration/fixtures/analysis_test_inputs/relion_subset_ugraphs/: 000000.yaml
tests/integration/fixtures/analysis_test_outputs/alignment_star/plot_picked_pose_distribution/: df_picked.csv
tests/integration/fixtures/analysis_test_outputs/classes_star/plot_classes/: df_picked.csv
tests/integration/fixtures/analysis_test_outputs/ctf_star/defocus_scatter/: df_picked.csv  df_truth.csv
tests/integration/fixtures/analysis_test_outputs/frames_star/frame_distribution/: df_picked.csv  df_truth.csv
tests/integration/fixtures/analysis_test_outputs/picking_star/label_picked/: df_picked.csv
tests/integration/fixtures/analysis_test_outputs/picking_star/label_truth/: df_truth.csv
tests/integration/fixtures/analysis_test_outputs/picking_star/label_truth_and_picked/: df_picked.csv  df_truth.csv
tests/integration/fixtures/analysis_test_outputs/picking_star/plot_boundary_investigation/: df_picked.csv
tests/integration/fixtures/analysis_test_outputs/picking_star/plot_overlap/: df_overlap.csv
tests/integration/fixtures/analysis_test_outputs/picking_star/plot_precision/: df_precision.csv
tests/integration/fixtures/het_metrics/: superpose_pca___kmeans_2.pkl  workflows.csv
