[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roodmus"
version = "0.0.31"
authors = [
  { name="Joel Greer", email="joel.greer@stfc.ac.uk" },
  { name="Maarten Joosten", email="m.j.joosten@tudelft.nl" },
]
description = "Synthetic SP micrograph creation and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["parakeet", "cryo-em", "micrographs", "analysis", "roodmus", "single-particle"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "appdirs==1.4.4",
  "anyio==3.7.1",
  "argon2_cffi==21.3.0",
  "argon2-cffi-bindings==21.2.0",
  "arrow==1.2.3",
  "asttokens==2.2.1",
  "astunparse==1.6.3",
  "async-lru==2.0.3",
  "attrs==23.1.0",
  "babel==2.12.1",
  "backcall==0.2.0",
  "beautifulsoup4==4.11.2",
  "bleach==6.0.0",
  "bs4==0.0.1",
  "ccpem-utils==0.0.1.dev14",
  "cffi==1.15.1",
  "cfgv==3.3.1",
  "charset-normalizer==3.0.1",
  "click==8.1.3",
  "cloudpickle==2.2.1",
  "comm==0.1.3",
  "cssselect==1.2.0",
  "cycler==0.11.0",
  "dask==2023.1.1",
  "dask-jobqueue==0.8.1",
  "debugpy==1.6.7",
  "decorator==5.1.1",
  "defusedxml==0.7.1",
  "distlib==0.3.6",
  "distributed==2023.1.1",
  "exceptiongroup==1.1.2",
  "executing==1.2.0",
  "fake-useragent==1.1.1",
  "fastjsonschema==2.17.1",
  "filelock==3.9.0",
  "fonttools==4.38.0",
  "fqdn==1.5.1",
  "fsspec==2023.1.0",
  "gemmi==0.5.4",
  "gemmi-program==0.6.5",
  "glob2==0.7",
  "guanaco==0.3.0",
  "h5py==3.8.0",
  "HeapDict==1.0.1",
  "identify==2.5.19",
  "idna==3.4",
  "imageio==2.27.0",
  "importlib-metadata==6.0.0",
  "iniconfig==2.0.0",
  "ipykernel==6.24.0",
  "ipython==8.14.0",
  "isoduration==20.11.0",
  "jedi==0.18.2",
  "Jinja2==3.1.2",
  "joblib==1.2.0",
  "json5==0.9.14",
  "jsonpointer==2.4",
  "jsonschema==4.18.3",
  "jsonschema-specifications==2023.6.1",
  "jupyter-client==8.3.0",
  "jupyter-core==5.3.1",
  "jupyter-events==0.6.3",
  "jupyter-lsp==2.2.0",
  "jupyter-server==2.7.0",
  "jupyter-server-terminals==0.4.4",
  "jupyterlab==4.0.3",
  "jupyterlab-pygments==0.2.2",
  "jupyterlab-server==2.23.0",
  "kiwisolver==1.4.4",
  "llvmlite==0.41.1",
  "locket==1.0.0",
  "lxml==4.9.2",
  "maptools==0.3.5",
  "MarkupSafe==2.1.2",
  "matplotlib==3.5.2",
  "matplotlib-inline==0.1.6",
  "MDAnalysis==2.6.1",
  "mdtraj==1.9.9",
  "mistune==3.0.1",
  "mrcfile==1.4.2",
  "msgpack==1.0.4",
  "nbclient==0.8.0",
  "nbconvert==7.6.0",
  "nbformat==5.9.1",
  "nest-asyncio==1.5.6",
  "networkx==3.0",
  "nodeenv==1.7.0",
  "notebook-shim==0.2.3",
  "numba==0.58.1",
  "numpy==1.23.0",
  "overrides==7.3.1",
  "packaging==23.0",
  "pandas==1.5.3",
  "pandas-stubs==1.5.3.230304",
  "pandocfilters==1.5.0",
  "parse==1.19.0",
  "parso==0.8.3",
  "partd==1.3.0",
  "pexpect==4.8.0",
  "pickleshare==0.7.5",
  "Pillow==9.3.0",
  "platformdirs==3.1.0",
  "pluggy==1.2.0",
  "pre-commit==3.1.1",
  "profet==0.0.1",
  "prometheus-client==0.17.1",
  "prompt-toolkit==3.0.39",
  "psutil==5.9.4",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.2",
  "pycparser==2.21",
  "pydantic==1.10.4",
  "pyee==8.2.2",
  "pygments==2.15.1",
  "pynndescent==0.5.10",
  "pyparsing==3.0.9",
  "pypdb==2.2",
  "pyppeteer==1.0.2",
  "pyquery==2.0.0",
  "pytest==7.4.0",
  "python-dateutil==2.8.2",
  "python-json-logger==2.0.7",
  "python-multem==0.3.3",
  "pytz==2022.7.1",
  "PyWavelets==1.4.1",
  "PyYAML==6.0",
  "pyzmq==25.1.0",
  "referencing==0.29.1",
  "requests==2.28.2",
  "requests-html==0.10.0",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rpds-py==0.8.10",
  "scikit-image==0.22.0",
  "scikit-learn==1.3.2",
  "scipy==1.9.3",
  "seaborn==0.12.2",
  "send2trash==1.8.2",
  "six==1.16.0",
  "sniffio==1.3.0",
  "sortedcontainers==2.4.0",
  "soupsieve==2.3.2.post1",
  "stack-data==0.6.2",
  "starfile==0.4.11",
  "tbb==2021.10.0",
  "tblib==1.7.0",
  "terminado==0.17.1",
  "threadpoolctl==3.1.0",
  "tifffile==2023.2.3",
  "tinycss2==1.2.1",
  "tomli==2.0.1",
  "toolz==0.12.0",
  "tornado==6.2",
  "tqdm==4.64.0",
  "traitlets==5.9.0",
  "types-pytz==2022.7.1.2",
  "types-tabulate==0.9.0.1",
  "typing_extensions==4.4.0",
  "umap-learn==0.5.4",
  "uri-template==1.3.0",
  "urllib3==1.26.14",
  "virtualenv==20.20.0",
  "w3lib==2.1.1",
  "wcwidth==0.2.6",
  "webcolors==1.13",
  "webencodings==0.5.1",
  "websocket-client==1.6.1",
  "websockets==10.4",
  "zict==2.2.0",
  "zipp==3.12.1",
]

[project.scripts]
roodmus = "roodmus.cli:main"

[project.urls]
"Homepage" = "https://github.com/ccpem/roodmus"
"Bug Tracker" = "https://github.com/ccpem/roodmus/issues"

[tool.licensecheck]
using = "requirements:requirements.txt;requirements-dev.txt"
format = "json"
