[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "roodmus"
version = "0.0.35"
authors = [
  { name="Joel Greer", email="joel.greer@stfc.ac.uk" },
  { name="Maarten Joosten", email="m.j.joosten@tudelft.nl" },
]
description = "Synthetic SP micrograph creation and analysis"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["parakeet", "cryo-em", "micrographs", "analysis", "roodmus", "single-particle"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "lxml_html_clean",
    "mdtraj",
    "glob2",
    "seaborn",
    "MDAnalysis",
    "umap-learn",
    "scikit-learn>=1.3",
    "python-parakeet==0.5.1",
]

[project.scripts]
roodmus = "roodmus.cli:main"

[project.urls]
"Homepage" = "https://github.com/ccpem/roodmus"
"Bug Tracker" = "https://github.com/ccpem/roodmus/issues"

[tool.licensecheck]
using = "requirements:requirements.txt;requirements-dev.txt"
format = "json"
